side-nav icon define

--- a/index.html
+++ b/index.html
@@ -158,26 +158,26 @@
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Home
+                <span data-feather="bar-chart-2"></span>
+                Account Report
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                House Keepers
+                <span data-feather="dollar-sign"></span>
+                Today's Cash Report
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Occupancy Report
+                <span data-feather="eye"></span>
+                GL Balance Sheet
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                House Keeping Report
+                <span data-feather="users"></span>
+                Today's Guest List
               </a>
             </li>
           </ul>
@@ -191,25 +191,19 @@
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
+                <span data-feather="user"></span>
                 House Keepers
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
+                <span data-feather="upload-cloud"></span>
                 Occupancy Report
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
+                <span data-feather="trash-2"></span>
                 House Keeping Report
               </a>
             </li>
