profile card design with mobile responsive

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <!-- Custom styles for this template -->
   <link href="dashboard.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -212,6 +213,7 @@
       </nav>
 
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <!-- secondary nav start -->
         <div
           class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
           <h1 class="h2">Dashboard</h1>
@@ -226,8 +228,51 @@
             </button>
           </div>
         </div>
+        <!-- secondary nav end -->
 
-        <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+        <!-- profile start -->
+        <section>
+          <div class="row my-5">
+            <div class="col-md-3 col-sm-12">
+              <div class="card profile-card my-2">
+                <div class="card-body profile-card-info">
+                  <span class="my-3 profile-card-info-icon" data-feather="home"></span>
+                  <h3 class="card-title">70</h3>
+                  <h6 class="card-subtitle mb-2 text-muted my-3">Available Room</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12">
+              <div class="card profile-card my-2">
+                <div class="card-body profile-card-info">
+                  <span class="my-3 profile-card-info-icon" data-feather="award"></span>
+                  <h3 class="card-title">2</h3>
+                  <h6 class="card-subtitle mb-2 text-muted my-3">This Month Reserve</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12">
+              <div class="card profile-card my-2">
+                <div class="card-body profile-card-info">
+                  <span class="my-3 profile-card-info-icon" data-feather="gift"></span>
+                  <h3 class="card-title">70</h3>
+                  <h6 class="card-subtitle mb-2 text-muted my-3">This Month Sales</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12">
+              <div class="card profile-card my-2">
+                <div class="card-body profile-card-info">
+                  <span class="my-3 profile-card-info-icon" data-feather="dollar-sign"></span>
+                  <h3 class="card-title">270000</h3>
+                  <h6 class="card-subtitle mb-2 text-muted my-3">Totla Sales In This Month</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- profile end -->
+        <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas> -->
 
         <!-- checkin table start -->
         <h2>Today's Pending Guest To Check Out</h2>
