all floor room plan design with modal

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
+              <a class="nav-link active" aria-current="page" href="index.html">
                 <span data-feather="home"></span>
                 Dashboard
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="today-room-status.html">
                 <span data-feather="file"></span>
                 Today Room Status
               </a>
@@ -275,7 +275,7 @@
         <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas> -->
 
         <!-- checkin table start -->
-        <h2>Today's Pending Guest To Check Out</h2>
+        <h2>Today's Pending Guest To Check Out:</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
@@ -405,7 +405,7 @@
         </div>
 
         <!-- checkout table start -->
-        <h2>Today's Pending Guest To Check In</h2>
+        <h2>Today's Pending Guest To Check In:</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
