--- a/reservation-list.html
+++ b/reservation-list.html
@@ -272,6 +272,178 @@
                     </div>
                 </section>
 
+                <section class="my-5">
+                    <!-- checkin table start -->
+
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <thead>
+                                <tr>
+                                    <th>Room No</th>
+                                    <th>Reserved Date</th>
+                                    <th>Contact No</th>
+                                    <th>From Date</th>
+                                    <th>To Date</th>
+                                    <th>Checkin</th>
+                                    <th>Checkout</th>
+                                    <th>No of Guest</th>
+                                    <th>Room Rent</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1,001</td>
+                                    <td>random</td>
+                                    <td>data</td>
+                                    <td>placeholder</td>
+                                    <td>text</td>
+                                    <td>1,002</td>
+                                    <td>placeholder</td>
+                                    <td>irrelevant</td>
+                                    <td>visual</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,002</td>
+                                    <td>placeholder</td>
+                                    <td>irrelevant</td>
+                                    <td>visual</td>
+                                    <td>layout</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,003</td>
+                                    <td>data</td>
+                                    <td>rich</td>
+                                    <td>dashboard</td>
+                                    <td>tabular</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,003</td>
+                                    <td>information</td>
+                                    <td>placeholder</td>
+                                    <td>illustrative</td>
+                                    <td>data</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,004</td>
+                                    <td>text</td>
+                                    <td>random</td>
+                                    <td>layout</td>
+                                    <td>dashboard</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,005</td>
+                                    <td>dashboard</td>
+                                    <td>irrelevant</td>
+                                    <td>text</td>
+                                    <td>placeholder</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>data</td>
+                                    <td>1,006</td>
+                                    <td>dashboard</td>
+                                    <td>illustrative</td>
+                                    <td>rich</td>
+                                    <td>
+                                        <select id="Select" class="form-select">
+                                            <option>Action</option>
+                                            <option>Guest</option>
+                                            <option>Reservation Letter</ption>
+                                            <option>Cancel Reservation</option>
+                                            <option>Service</option>
+                                            <option>Room Re-Schedule</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+
             </main>
         </div>
     </div>
