--- a/reservation-list.html
+++ b/reservation-list.html
@@ -232,6 +232,7 @@
                     </div>
                 </div>
                 <!-- secondary nav end -->
+
                 <section>
                     <div class="row">
                         <h1 class="text-center text-muted">VIEW RESERVATION</h1>
@@ -264,7 +265,9 @@
                                             <label for="fromDate" class="form-label">From Date</label>
                                             <input type="date" class="form-control" id="fromDate">
                                         </div>
-                                        <button type="submit" class="btn btn-danger">search</button>
+                                        <div class="d-flex justify-content-center">
+                                            <button type="submit" class="btn btn-danger">search</button>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
@@ -272,9 +275,26 @@
                     </div>
                 </section>
 
-                <section class="my-5">
-                    <!-- checkin table start -->
+                <section>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12 m-auto">
+                            <div class="card profile-card my-2">
+                                <div class="card-body d-flex justify-content-around align-items-center">
+                                    <div class="d-flex align-items-center my-5">
+                                        <div class="">
+                                            <input type="text" class="form-control" id="confirmationNumber"
+                                                aria-describedby="confirmation" placeholder="enter a name to search">
+                                        </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <button class="btn btn-danger">search</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
+                <section class="my-5">
+                    <!--  table start -->
                     <div class="table-responsive">
                         <table class="table table-striped table-sm">
                             <thead>
@@ -441,7 +461,22 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <div class="d-flex justify-content-around align-items-center">
+                            <p class="text-muted">Showing 1 to 10 of 169 entries</p>
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
+
                 </section>
 
             </main>
