--- a/today-room-status.html
+++ b/today-room-status.html
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="reservation-list.html">
                                 <span data-feather="users"></span>
                                 Reservation List
                             </a>
