--- a/room-create.html
+++ b/room-create.html
@@ -220,7 +220,7 @@
                 <!-- secondary nav start -->
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Company creation</h1>
+                    <h1 class="h2">Room creation</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -237,68 +237,37 @@
                 <!-- company creation box start -->
                 <section>
                     <div class="row">
-                        <h1 class="text-center text-muted">COMPANY CREATION</h1>
+                        <h1 class="text-center text-muted my-3">ROOM CREATION</h1>
                         <div class="col-md-6 col-sm-12 m-auto">
-                            <div class=" card profile-card my-2 ">
+                            <div class=" card profile-card">
                                 <div class="card-body d-flex justify-content-around align-items-center">
-                                    <form>
-                                        <div class="mb-3">
-                                            <label for="companyName" class="form-label">Company
-                                                Name</label>
-                                            <input type="text" class="form-control" id="companyName"
-                                                aria-describedby="companyAddress" placeholder="google.Inc" required>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="companyAddress" class="form-label">Company
-                                                Address</label>
-                                            <input type="text" class="form-control" id="companyAddress"
-                                                aria-describedby="companyAddress"
-                                                placeholder="Mountain View, California, United States" required>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="companyWebsite" class="form-label">Company
-                                                Website</label>
-                                            <input type="text" class="form-control" id="companyWebsite"
-                                                placeholder="google.com" aria-describedby="companyWebsite" required>
-                                        </div>
-
+                                    <form class="my-5">
                                         <div class="input-group mb-3">
-                                            <span class="input-group-text"><i class="fas fa-mobile"></i></span>
-                                            <input type="number" class="form-control" placeholder="Company Contact No"
-                                                aria-label="companyContactNo" required>&nbsp;&nbsp;&nbsp;&nbsp;
-                                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                            <input type="email" class="form-control" placeholder="Company Email"
-                                                aria-label="companyEmail" required>
+                                            <span class="input-group-text"><i class="fas fa-house-user"></i></span>
+                                            <input type="number" class="form-control" placeholder="Room Number"
+                                                aria-label="roomNumber" required>&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <span class="input-group-text"><i class="fab fa-accusoft"></i></span>
+                                            <input type="number" class="form-control" placeholder="Floor Number"
+                                                aria-label="floorNumber" required>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="companyContactPersonName" class="form-label">Company
-                                                Contact
-                                                Person Name
-                                            </label>
-                                            <input type="text" class="form-control" id="companyContactPersonName"
-                                                placeholder="Mr. David Morgan"
-                                                aria-describedby="companyContactPersonName" required>
+                                            <select class="form-select" id="floatingSelect"
+                                                aria-label="Floating label select example">
+                                                <option selected>Choose Room Category</option>
+                                                <option value="1">Delux</option>
+                                                <option value="2">Super Delux</option>
+                                                <option value="2">Auditorium</option>
+                                                <option value="2">VIP</option>
+                                                <option value="2">Dormitory</option>
+                                                <option value="2">Executive Suite</option>
+                                            </select>
                                         </div>
-                                        <div class="mb-3">
-                                            <label for="companyContactPersonPhoneNumber" class="form-label">Company
-                                                Contact Person Phone Number
-                                            </label>
-                                            <input type="number" class="form-control" placeholder="+88012378945"
-                                                id="companyContactPersonPhoneNumber"
-                                                aria-describedby="companyContactPersonPhoneNumber" required>
+                                        <div class="form-floating">
+                                            <textarea class="form-control" placeholder="Room Details" id="roomDetails"
+                                                style="height: 100px"></textarea>
+                                            <label for="roomDetails">Room Details</label>
                                         </div>
-                                        <div class="mb-3">
-                                            <label for="companyContactPersonEmail" class="form-label">Company
-                                                Contact
-                                                Person Email
-                                            </label>
-                                            <input type="email" class="form-control" id="companyContactPersonEmail"
-                                                placeholder="jpmorgan@gmail.com"
-                                                aria-describedby="companyContactPersonEmail" required>
-                                        </div>
-
-
-                                        <div class="d-flex justify-content-center">
+                                        <div class="d-flex justify-content-center mt-5">
                                             <button type="submit" class="btn btn-danger">CREATE &nbsp;<i
                                                     class="fas fa-paper-plane"></i></button>
                                         </div>
