--- a/today-room-status.html
+++ b/today-room-status.html
@@ -95,7 +95,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="company-entry.html">
                                 <span data-feather="airplay"></span>
                                 Company Entry
                             </a>
