--- a/today-room-status.html
+++ b/today-room-status.html
@@ -125,7 +125,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="room-reservation.html">
                                 <span data-feather="thumbs-up"></span>
                                 New Reservation
                             </a>
