--- a/company-entry.html
+++ b/company-entry.html
@@ -223,6 +223,10 @@
                     <h1 class="h2">Company creation</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                    href="company-list.html">Company List</a></button>
+                        </div>
+                        <div class="btn-group me-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
                         </div>
