--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
           <h1 class="h2">Dashboard</h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
+              <button type="button" class="btn btn-sm btn-outline-secondary"><a href="room-create.html">Create Room
+                </a></button>
+            </div>
+            <div class="btn-group me-2">
               <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
               <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
             </div>
