--- a/index.html
+++ b/index.html
@@ -10,11 +10,29 @@
   <title>Desha -Dashboard</title>
 
   <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/dashboard/"> -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
   <style>
+    /* new style start */
+
+
+
+
+    .navbar-nav li {
+      display: block;
+      width: 100%;
+    }
+
+    .navbar-nav li a {
+      margin-left: 30px;
+      color: black;
+    }
+
+    /* new style end */
+
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
@@ -57,11 +75,24 @@
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">
+            <li class="nav-item panel panel-default" id="dropdown">
+              <a class="nav-link active" data-toggle="collapse" href="#dropdown-one" aria-current="page">
                 <span data-feather="home"></span>
                 Dashboard
+                <i class="fas fa-sort-down"></i>
               </a>
+              <!-- dropdown -->
+              <div id="dropdown-one" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <ul class="nav navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">Mail</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Ecommerce</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">User</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Social</a></li>
+                  </ul>
+                </div>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="today-room-status.html">
@@ -541,9 +572,16 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script> -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
     crossorigin="anonymous"></script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
     integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
